<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cbk_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#ffffff"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <me.xiaopan.switchbutton.SwitchButton
                android:id="@+id/customBackPower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/cbk_title"
                android:textColor="#454A5B"
                android:textSize="17sp"
                app:frameDrawable="@drawable/switch_ex_frame"
                app:sliderDrawable="@drawable/selector_switch_slider"
                app:stateDrawable="@drawable/selector_switch_state"
                app:stateMaskDrawable="@drawable/switch_ex_mask"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/cbk_description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/cbk_double_space_title"/>

            <SeekBar
                android:id="@+id/doubleBackSpaceProgress"
                style="@style/Widget.SeekBar.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_bg"
                android:max="150"
                android:padding="10dp"
                android:progress="80"
                android:splitTrack="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cbk_double_space_description"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/app_pronouncement1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement5"
                    tools:ignore="RtlHardcoded"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement7"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/app_pronouncement8"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"/>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
